{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 66,
  "lineage": "00152d7a-5e8f-8bf3-93c9-4fde5ac7f254",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "fargate-alb",
      "provider": "module.ecs.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:658251713809:loadbalancer/app/fargate-flask-alb/9888bda633f61165",
            "arn_suffix": "app/fargate-flask-alb/9888bda633f61165",
            "desync_mitigation_mode": "defensive",
            "dns_name": "fargate-flask-alb-1853426919.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:658251713809:loadbalancer/app/fargate-flask-alb/9888bda633f61165",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fargate-flask-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0535559925f0851c7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-085ee9f35c296a55b"
              },
              {
                "subnet_id": "subnet-0bc957df8395b4b14"
              },
              {
                "subnet_id": "subnet-0f42472cb9af797a9"
              }
            ],
            "subnets": [
              "subnet-085ee9f35c296a55b",
              "subnet-0bc957df8395b4b14",
              "subnet-0f42472cb9af797a9"
            ],
            "tags": {
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "ecs",
              "protected": "true"
            },
            "tags_all": {
              "iac": "terraform",
              "owner": "philip.dunn",
              "project": "ecs",
              "protected": "true"
            },
            "vpc_id": "vpc-05e715743bd052660",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.ecs.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_forward",
      "provider": "module.ecs.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:658251713809:listener/app/fargate-flask-alb/9888bda633f61165/065eec3237fe7b3c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:658251713809:targetgroup/fargate-alb-tg/34da035cdff809ed",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:658251713809:listener/app/fargate-flask-alb/9888bda633f61165/065eec3237fe7b3c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:658251713809:loadbalancer/app/fargate-flask-alb/9888bda633f61165",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.fargate-alb",
            "module.ecs.aws_lb_target_group.fargate-tg",
            "module.ecs.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fargate-tg",
      "provider": "module.ecs.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:658251713809:targetgroup/fargate-alb-tg/34da035cdff809ed",
            "arn_suffix": "targetgroup/fargate-alb-tg/34da035cdff809ed",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 90,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:658251713809:targetgroup/fargate-alb-tg/34da035cdff809ed",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fargate-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05e715743bd052660"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "module.ecs.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:security-group/sg-0535559925f0851c7",
            "description": "controls access to the Application Load Balancer (ALB)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0535559925f0851c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "658251713809",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05e715743bd052660"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "module.ecs.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:658251713809:security-group/sg-0302f2a4bda17a556",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0302f2a4bda17a556",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0535559925f0851c7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0535559925f0851c7"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0535559925f0851c7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fargate-tasks-sg",
            "name_prefix": "",
            "owner_id": "658251713809",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05e715743bd052660"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}